--- a/.github/workflows/build-witness-generator.yml
+++ b/.github/workflows/build-witness-generator.yml
@@ -15,7 +15,7 @@ on:
 
 jobs:
   setup:
-    name: Define variables and configure environment
+    name: Configure Environment 
     runs-on: ubuntu-latest
     outputs:
       version: ${{ steps.define-version.outputs.version }}
@@ -71,30 +71,54 @@ jobs:
         working-directory: repo
         run: git submodule update --init --recursive
 
-      - name: Generate C++ Circuit
+      - name: Setup Dependencies
+        working-directory: repo/circom_circuits/rapidsnark
+        run: sudo apt update -y
+
+      - name: Install Dependencies [Prover]
+        run: sudo apt install -y build-essential cmake libgmp-dev libsodium-dev nasm curl m4
+
+      - name: Install Dependencies [Witness Generator]
+        run: sudo apt install nlohmann-json3-dev
+
+      - name: Compile Prover
+        working-directory: repo/circom_circuits/rapidsnark
+        run: |
+          ./build_gmp.sh host
+          make host
+
+      - name: Generate Witness Generator's C++ Circuit
         working-directory: repo/circom_circuits/Mantle
         run: circom --c --r1cs --no_asm --O2 pol.circom
 
-      - name: Dependencies - Setup
-        run: |
-          sudo apt update
-
-      - name: Dependencies - Install [nlohmann/json]
-        run: sudo apt install nlohmann-json3-dev
-
-      - name: Compile Circuit
+      - name: Compile Witness Generator
         working-directory: repo/circom_circuits/Mantle/pol_cpp
         run: make pol
 
       - name: Bundle
-        working-directory: repo/circom_circuits/Mantle/pol_cpp
-        run: tar -czf pol-linux-${{ env.ARCH }}.tar.gz pol pol.dat
+        working-directory: repo
+        env:
+          BUNDLE_NAME: pol-${{ env.OS }}-${{ env.ARCH }}
+          WITNESS_GENERATOR_DIR: circom_circuits/Mantle/pol_cpp
+          RAPIDSNARK_DIR: circom_circuits/rapidsnark/package
+        run: |
+          BUNDLE_DIR_WITNESS_GENERATOR="${BUNDLE_NAME}/witness-generator"
+          BUNDLE_DIR_RAPIDSNARK="${BUNDLE_NAME}/rapidsnark"
+      
+          mkdir -p "$BUNDLE_DIR_WITNESS_GENERATOR" "$BUNDLE_DIR_RAPIDSNARK"
+      
+          mv "${WITNESS_GENERATOR_DIR}/pol" "$BUNDLE_DIR_WITNESS_GENERATOR/"
+          mv "${WITNESS_GENERATOR_DIR}/pol.dat" "$BUNDLE_DIR_WITNESS_GENERATOR/"
+      
+          mv "${RAPIDSNARK_DIR}"/bin/{prover,verifier} "$BUNDLE_DIR_RAPIDSNARK/"
+      
+          tar -czf "${BUNDLE_NAME}.tar.gz" "${BUNDLE_NAME}"
 
-      - name: Upload Binary
-        uses: actions/upload-artifact@v4
+      - name: Upload Bundle
+        uses: actions/upload-artifact@v4 
         with:
           name: pol-${{ env.OS }}-${{ env.ARCH }}.tar.gz
-          path: repo/circom_circuits/Mantle/pol_cpp/pol-${{ env.OS }}-${{ env.ARCH }}.tar.gz
+          path: repo/pol-${{ env.OS }}-${{ env.ARCH }}.tar.gz
 
   build-windows-native:
     name: Build Windows Binary (Native)
@@ -143,51 +167,100 @@ jobs:
         working-directory: repo/circom_circuits/Mantle
         run: circom --c --r1cs --no_asm --O2 pol.circom
 
-      - name: Dependencies - Setup
-        shell: msys2 {0}
-        run: mkdir /include
-
-      - name: Dependencies - Install [mman-win32]
+      - name: Install Dependencies [Witness Generator]
         shell: msys2 {0}
         run: |
-          git clone https://github.com/alitrack/mman-win32.git
-          cd mman-win32
-          pwd
-          ./configure --prefix= # Path: /
-          make
-          make install
-
-      - name: Dependencies - Install [nlohmann/json]
-        shell: msys2 {0}
-        run: |
+          # nlohmann/json
           mkdir -p /include/nlohmann/
           wget -O /include/nlohmann/json.hpp https://github.com/nlohmann/json/releases/download/v3.12.0/json.hpp
 
-      - name: Replace pol Makefile # TODO: Make a fork generate the appropriate Windows Makefile
+          # mman-win32
+          git clone https://github.com/alitrack/mman-win32.git
+          pushd mman-win32
+          ./configure --prefix= # Path: /
+          make
+          make install
+          popd
+
+      - name: Install Dependencies [Prover]
+        shell: msys2 {0}
+        run: pacman --noconfirm -Sy --needed cmake nasm mingw-w64-ucrt-x86_64-libsodium
+
+      - name: Replace Prover Makefile # TODO: Make a fork generate the appropriate Windows Makefile
+        shell: msys2 {0}
+        working-directory: repo
+        run: cp .github/resources/prover/${{ env.OS }}.Makefile circom_circuits/rapidsnark/Makefile
+
+      - name: Replace Prover CMakeLists
+        shell: msys2 {0}
+        working-directory: repo
+        run: cp .github/resources/prover/${{ env.OS }}.src-CMakeLists.txt circom_circuits/rapidsnark/src/CMakeLists.txt
+ 
+      - name: Patch Windows mman
+        shell: msys2 {0}
+        working-directory: repo
+        run: cp .github/resources/prover/${{ env.OS }}.mman_patch.hpp /include/mman_patch.hpp
+
+      - name: Add uio.h headers
+        shell: msys2 {0}
+        working-directory: repo
+        run: cp .github/resources/prover/${{ env.OS }}.uio.h /include/sys/uio.h
+
+      - name: Replace build_gmp
+        shell: msys2 {0}
+        working-directory: repo
+        run: cp .github/resources/prover/${{ env.OS }}.build_gmp.sh circom_circuits/rapidsnark/build_gmp.sh
+
+      - name: Compile Prover
+        shell: msys2 {0}
+        working-directory: repo/circom_circuits/rapidsnark
+        run: |
+          ./build_gmp.sh host
+          make host_windows_x86_64
+
+      - name: Generate Witness Generator's C++ Circuit
+        working-directory: repo/circom_circuits/Mantle
+        run: circom --c --r1cs --no_asm pol.circom
+
+      - name: Replace Witness Generator Makefile # TODO: Make a fork generate the appropriate Windows Makefile
         working-directory: repo
         shell: msys2 {0}
-        run: cp .github/resources/Makefile.${{ env.OS }} circom_circuits/Mantle/pol_cpp/Makefile
+        run: cp .github/resources/witness-generator/${{ env.OS }}.Makefile circom_circuits/Mantle/pol_cpp/Makefile
 
-      - name: Compile Circuit
+      - name: Compile Witness Generator
         shell: msys2 {0}
         working-directory: repo/circom_circuits/Mantle/pol_cpp
         run: make pol.exe
 
       - name: Bundle
+        working-directory: repo
         shell: msys2 {0}
-        working-directory: repo/circom_circuits/Mantle/pol_cpp
+        env:
+          BUNDLE_NAME: pol-${{ env.OS }}-${{ env.ARCH }}
+          WITNESS_GENERATOR_DIR: circom_circuits/Mantle/pol_cpp
+          RAPIDSNARK_DIR: circom_circuits/rapidsnark/package
         run: |
-          MINGW_BASE_DIR="/${MSYSTEM,,}"   # converts to lowercase, e.g., MINGW64 -> mingw64
+          BUNDLE_DIR_WITNESS_GENERATOR="${BUNDLE_NAME}/witness-generator"
+          BUNDLE_DIR_RAPIDSNARK="${BUNDLE_NAME}/rapidsnark"
+          MINGW_BASE_DIR="/${MSYSTEM,,}"
           MINGW_DLL_DIR="$MINGW_BASE_DIR/bin"
-          cp "$MINGW_DLL_DIR"/{libgcc_s_seh-1.dll,libgmp-10.dll,libwinpthread-1.dll,libstdc++-6.dll} .
-          mv pol.dat pol.exe.dat
-          tar -czf pol-${{ env.OS }}-${{ env.ARCH }}.tar.gz pol.exe pol.exe.dat *.dll
+      
+          mkdir -p "$BUNDLE_DIR_WITNESS_GENERATOR" "$BUNDLE_DIR_RAPIDSNARK"
+      
+          cp "$MINGW_DLL_DIR"/{libgcc_s_seh-1.dll,libwinpthread-1.dll,libstdc++-6.dll,libgmp-10.dll} "$BUNDLE_DIR_WITNESS_GENERATOR/"
+          mv "${WITNESS_GENERATOR_DIR}/pol" "$BUNDLE_DIR_WITNESS_GENERATOR/pol.exe"
+          mv "${WITNESS_GENERATOR_DIR}/pol.dat" "$BUNDLE_DIR_WITNESS_GENERATOR/pol.exe.dat"
+      
+          cp "$MINGW_DLL_DIR"/{libgcc_s_seh-1.dll,libwinpthread-1.dll,libstdc++-6.dll} "$BUNDLE_DIR_RAPIDSNARK/"
+          mv "${RAPIDSNARK_DIR}"/bin/{prover.exe,verifier.exe} "$BUNDLE_DIR_RAPIDSNARK/"
+      
+          tar -czf "${BUNDLE_NAME}.tar.gz" "${BUNDLE_NAME}"
 
-      - name: Upload Binary
+      - name: Upload Bundle
         uses: actions/upload-artifact@v4
         with:
           name: pol-${{ env.OS }}-${{ env.ARCH }}.tar.gz
-          path: repo/circom_circuits/Mantle/pol_cpp/pol-${{ env.OS }}-${{ env.ARCH }}.tar.gz
+          path: repo/pol-${{ env.OS }}-${{ env.ARCH }}.tar.gz
 
   build-macos-native:
     name: Build MacOS Binary (Native)
@@ -222,37 +295,61 @@ jobs:
         working-directory: repo
         run: git submodule update --init --recursive
 
-      - name: Generate C++ Circuit
+      - name: Setup Dependencies
+        run: mkdir include
+
+      - name: Install Dependencies [Witness Generator]
+        run: brew install nlohmann-json
+
+      - name: Install Dependencies [Prover]
+        run: brew install cmake nasm m4
+
+      - name: Compile Prover
+        working-directory: repo/circom_circuits/rapidsnark
+        run: |
+          ./build_gmp.sh macos_arm64
+          make macos_arm64
+
+      - name: Generate Witness Generator's C++ Circuit
         working-directory: repo/circom_circuits/Mantle
         run: circom --c --r1cs --no_asm --O2 pol.circom
 
-      - name: Dependencies - Setup
-        run: mkdir include
-
-      - name: Dependencies - Install [nlohmann/json]
-        run: brew install nlohmann-json
-
-      - name: Replace pol Makefile # TODO: Make a fork generate the appropriate MacOS Makefile
+      - name: Replace Witness Generator's Makefile # TODO: Make a fork generate the appropriate MacOS Makefile
         working-directory: repo
-        run: cp .github/resources/Makefile.${{ env.OS }} circom_circuits/Mantle/pol_cpp/Makefile
+        run: cp .github/resources/witness-generator/${{ env.OS }}.Makefile circom_circuits/Mantle/pol_cpp/Makefile
 
-      - name: Patch MacOS GMP
+      - name: Patch MacOS GMP # TODO: Maybe not needed?
         working-directory: repo
-        run: cp .github/resources/gmp_patch.${{ env.OS }}.hpp circom_circuits/Mantle/pol_cpp/gmp_patch.${{ env.OS }}.hpp
+        run: cp .github/resources/witness-generator/${{ env.OS }}.gmp_patch.hpp circom_circuits/Mantle/pol_cpp/gmp_patch.hpp
 
-      - name: Compile Circuit
+      - name: Compile Witness Generator
         working-directory: repo/circom_circuits/Mantle/pol_cpp
         run: make pol
 
       - name: Bundle
-        working-directory: repo/circom_circuits/Mantle/pol_cpp
-        run: tar -czf pol-${{ env.OS }}-${{ env.ARCH }}.tar.gz pol pol.dat
+        working-directory: repo
+        env:
+          BUNDLE_NAME: pol-${{ env.OS }}-${{ env.ARCH }}
+          WITNESS_GENERATOR_DIR: circom_circuits/Mantle/pol_cpp
+          RAPIDSNARK_DIR: circom_circuits/rapidsnark/package_macos_arm64
+        run: |
+          BUNDLE_DIR_WITNESS_GENERATOR="${BUNDLE_NAME}/witness-generator"
+          BUNDLE_DIR_RAPIDSNARK="${BUNDLE_NAME}/rapidsnark"
+      
+          mkdir -p "$BUNDLE_DIR_WITNESS_GENERATOR" "$BUNDLE_DIR_RAPIDSNARK"
+      
+          mv "${WITNESS_GENERATOR_DIR}/pol" "$BUNDLE_DIR_WITNESS_GENERATOR/"
+          mv "${WITNESS_GENERATOR_DIR}/pol.dat" "$BUNDLE_DIR_WITNESS_GENERATOR/"
+      
+          mv "${RAPIDSNARK_DIR}"/bin/{prover,verifier} "$BUNDLE_DIR_RAPIDSNARK/"
+      
+          tar -czf "${BUNDLE_NAME}.tar.gz" "${BUNDLE_NAME}"
 
-      - name: Upload Binary
+      - name: Upload Bundle
         uses: actions/upload-artifact@v4
         with:
           name: pol-${{ env.OS }}-${{ env.ARCH }}.tar.gz
-          path: repo/circom_circuits/Mantle/pol_cpp/pol-${{ env.OS }}-${{ env.ARCH }}.tar.gz
+          path: repo/pol-${{ env.OS }}-${{ env.ARCH }}.tar.gz
 
   publish-release:
     name: Create Release
